--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,6 +22,8 @@ jobs:
         go-version: '1.20'
 
     - name: Build
+      run: go mod init
+      run: go mod tidy
       run: go build -v ./build
 
     - name: Test
