--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -20,10 +20,14 @@ jobs:
       uses: actions/setup-go@v4
       with:
         go-version: '1.20'
-
-    - name: Build
+        
+    - name: go mod init    
       run: go mod init
+      
+    - name: go mod tidy
       run: go mod tidy
+      
+    - name: Build
       run: go build -v ./build
 
     - name: Test
