--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,8 +22,8 @@ jobs:
         go-version: '1.20'
         
     - name: go mod init    
-      run: go mod init
-      
+      run: go mod init wolz
+    
     - name: go mod tidy
       run: go mod tidy
       
