--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,6 +19,12 @@ jobs:
       with:
         go-version: '1.20'
 
+    - name: Go mod init
+      run: go mod init
+
+    - name: Go mod tidy
+      run: go mod tidy
+
     - name: Build
       run: go build -o wolweb -v .
 
