--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,7 @@ jobs:
         go-version: '1.20'
 
     - name: Go mod init
-      run: go mod init wolz
+      run: go mod init wolzz
 
     - name: Go mod tidy
       run: go mod tidy
