--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Login to DockerHub
       uses: docker/login-action@v1 
       with:
-        username: ${{ github.repository_owner }}
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
       
     - name: Build and push
@@ -33,5 +33,5 @@ jobs:
         push: true
         platforms: linux/386, linux/amd64, linux/arm64/v8, linux/arm/v7, linux/arm/v6
         tags: |
-          ${{ github.repository_owner }}/wolweb:${{ github.ref_name }}
-          ${{ github.repository_owner }}/wolweb:latest
+          ${{ secrets.DOCKERHUB_USERNAME }}/wolzz:${{ github.ref_name }}
+          ${{ secrets.DOCKERHUB_USERNAME }}/wolzz:latest
