--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -31,7 +31,7 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         push: true
-        platforms: linux/386, linux/amd64, linux/arm64/v8, linux/arm/v7, linux/arm/v6
+        platforms: linux/amd64, linux/arm64/v8, linux/arm/v7, linux/riscv64
         tags: |
           ${{ secrets.DOCKERHUB_USERNAME }}/wolzz:${{ github.ref_name }}
           ${{ secrets.DOCKERHUB_USERNAME }}/wolzz:latest
