--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,7 +3,7 @@ name: ci
 on:
   push:
     branches:
-      - 'master'
+      - 'main'
     tags:
       - '*.*.*'
 
@@ -31,7 +31,7 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         push: true
-        platforms: linux/amd64, linux/arm64/v8, linux/arm/v7, linux/riscv64
+        platforms: linux/amd64, linux/arm64/v8, linux/arm/v7
         tags: |
           ${{ secrets.DOCKERHUB_USERNAME }}/wolzz:${{ github.ref_name }}
           ${{ secrets.DOCKERHUB_USERNAME }}/wolzz:latest
